Fixed header media queries and slide menu action
Header links now flows to next line at a higher resolution to ensure no overlap.
Slide menu font decreases for smaller screens and a set max height ensures boxes line up.
Slide menu compensates for small screen height and scrolls
Closes #169
Related #184 ?

--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -93,7 +93,7 @@
         font-size:2.5em;
     }
 }
-@media screen and (max-width: 1420px) {
+@media screen and (max-width: 1550px) {
 
     .cbp-af-header .cbp-af-inner {
         width: 100%;
